fix dra related endpoints + dra attach on deployments
